[project]
name = "lrspline"
version = "1.13.0"
description = "Python bindings for the LRSplines library"
authors = [
    {name = "Eivind Fonn", email = "eivind.fonn@sintef.no"},
]
dependencies = [
    "numpy>=2.0",
]
requires-python = ">=3.11,<4.0"
readme = "README.rst"
license = {text = "GPL-3-or-later"}

[build-system]
requires = ["pdm-backend", "setuptools>=66", "cython>=3", "numpy>=1.23"]
build-backend = "pdm.backend"

[tool.pdm.build]
run-setuptools = true
source-includes = ["submodules/LRSplines/src/*.cpp", "submodules/LRSplines/include/**/*.h", "pdm_build.py"]
excludes = ["tests"]

[tool.pdm.dev-dependencies]
dev = [
    "bump-my-version>=0.17.4",
    "pytest>=8.0.1",
    "ruff>=0.2.2",
    "mypy>=1.8.0",
    "typing-extensions>=4.9.0",
]

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]
files = ["lrspline/**/*.py"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"

[tool.ruff]
line-length = 110
include = ["lrspline/**/*.py", "lrspline/**/*.pyi", "tests/**/*.py"]
exclude = ["tests/generated/**/*.py"]

[tool.ruff.lint]
select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TCH",      # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",      # Use pathlib instead of os.path
    "TD",       # Be diligent with TODO comments
    "NPY",      # Some numpy-specific things
]
ignore = [
    "E741",     # Ambiguous variable name
    "SIM115",   # Complains if we use __enter__ inside an __enter__ method
    "ISC001",   # Conflicts with rust formatting
    "TD003",    # Issue links for each todo comment
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.bumpversion]
allow_dirty = false
current_version = "1.13.0"
commit = false
tag = false
parse = """(?x)
    (?P<major>[0-9]+)
    \\.(?P<minor>[0-9]+)
    \\.(?P<patch>[0-9]+)
    (?:
        (?P<pre_label>a|b|rc|stable)
        (?P<pre_number>[0-9]+)?
    )?
"""
serialize = [
    "{major}.{minor}.{patch}{pre_label}{pre_number}",
    "{major}.{minor}.{patch}",
]
message = "Bump version: {current_version} -> {new_version}"
tag_message = "Bump version: {current_version} -> {new_version}"
sign_tags = true

[tool.bumpversion.parts.pre_label]
optional_value = "stable"
values = [
    "a",
    "b",
    "rc",
    "stable",
]

[tool.bumpversion.parts.pre_number]
first_value = "1"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "lrspline/__init__.py"
