[project]
name = "lrsplines"
version = "1.15.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Eivind Fonn", email = "evfonn@gmail.com" }
]
requires-python = ">=3.11, <4.0"
dependencies = [
    "lrspline>=1.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
